Aggiunto contenuto al Footer, iniziato a guardare contenuto Main

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="site_header">
         <!-- Container dell'header -->
         <div class="container-fluid d-flex align-items-center h-100">
-            <div class="row w-100 d-flex align-items-center justify-content-around">
+            <div class="row w-100 d-flex align-items-center justify-content-between">
                 <div class="col-3 d-flex align-items-center">
                     <div class="col-2 justify-content-center align-items-center"> 
                         <img class="w-100 ratio-1x1 h-100" src="./assets/img/unnamed.jpg" alt="Logo Boolean">
@@ -49,7 +49,13 @@
     
     <!-- /#site_footer -->
     <div id="site_footer">
-
+        <div class="container-fluid h-100">
+            <div class="row d-flex h-100 align-items-center justify-content-between">
+                <div class="col-3 d-flex">
+                    <span class="align-self-center"> Made with &hearts; by <a href="https://google.com">Boolean</a></span>     
+                </div>
+            </div>
+        </div>
     </div>
     
     <!-- Link a JS -->
