Aggiunto e monitorata zona main con cella. iniziato a lavorare su JS

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
         <div class="container-fluid d-flex align-items-center h-100">
             <div class="row w-100 d-flex align-items-center justify-content-between">
                 <div class="col-3 d-flex align-items-center">
+                    <!-- Logo -->
                     <div class="col-2 justify-content-center align-items-center"> 
                         <img class="w-100 ratio-1x1 h-100" src="./assets/img/unnamed.jpg" alt="Logo Boolean">
                     </div>
+                    <!-- Titolo pagina -->
                     <div class="col-10 justify-content-center align-items-center">
                         <h1 class="mb-0">Campo Minato</h1>
                     </div>
                 </div>
+                <!-- Form di avvio campo minato -->
                 <form class="col-3 d-flex align-items-center justify-content-evenly">
                     <!-- Titolo label -->
                     <label for="title">Difficoltà:</label>
@@ -44,13 +47,17 @@
     
     <!-- /#site_main -->
     <div id="site_main">
-
+        <div class="container-fluid d-flex align-items-center justify-content-center h-100">
+            <div class="row w-50 h-75 justify-content-start align-content-start flex-grow-0 flex-wrap">
+            </div>
+        </div>
     </div>
     
     <!-- /#site_footer -->
     <div id="site_footer">
         <div class="container-fluid h-100">
             <div class="row d-flex h-100 align-items-center justify-content-between">
+                <!-- Riconoscimento a fondo pagina -->
                 <div class="col-3 d-flex">
                     <span class="align-self-center"> Made with &hearts; by <a href="https://google.com">Boolean</a></span>     
                 </div>
