--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <!-- /#site_main -->
     <div id="site_main">
         <div class="container-fluid d-flex align-items-center justify-content-center h-100">
-            <div class="cells row w-50 h-75 justify-content-start align-content-start flex-grow-0 flex-wrap">
+            <div class="row w-50 cells h-75 justify-content-start align-content-center flex-grow-0 flex-wrap" id="clean">
+            
             </div>
         </div>
     </div>
